--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,14 @@ footer{
 	width:100%;
 }
 
+.text-container {
+	margin: 20px;
+}
+
+.hidden {
+	opacity: 0;
+}
+
 @media(max-width: 800px){
 
 	.container{
